--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ HERO
     cursor: pointer;
     transition: all 0.3s ease;
     box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+    margin: 10px 0; /* 🔹 Añade separación vertical */
 }
 
 .cta-button:hover {
@@ -298,7 +299,7 @@ HERO
 
 #novedades {
     background-color: #f9f9f9;
-    padding: 80px 60px;
+    padding: 0.01px 10px; 
     text-align: center;
 }
 
@@ -405,23 +406,24 @@ HERO
     background-color: #f9f9f9;
     padding: 80px 60px;
     text-align: center;
+    margin-top: 10px; /* 🔹 Agrega espacio antes del título Catálogo */
 }
 
 #propiedades h2 {
-    font-size: 2.3rem;
+    font-size: 2.5rem;
     color: var(--color-primario);
     font-weight: 700;
     margin-bottom: 10px;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
 }
 
 #propiedades h2::after {
     content: "";
     display: block;
-    width: 80px;
-    height: 3px;
+    width: 300px;
+    height: 4px;
     background-color: var(--color-secundario);
-    margin: 0.5rem auto 2.5rem;
+    margin: 0.7rem auto 2.5rem;
     border-radius: 5px;
 }
 
